--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -21,5 +21,6 @@
     "League name": "Nazwa ligi",
     "Number of teams": "Liczba drużyn",
     "Add season": "Utwórz sezon",
-    "Season name": "Nazwa sezonu"
+    "Season name": "Nazwa sezonu",
+    "Apply": "Dołącz"
 }
