User seeder, name of Api controlers

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -19,8 +19,10 @@
     "Add player": "Zgłoś gracza",
     "Create league": "Utwórz ligę",
     "League name": "Nazwa ligi",
+    "League": "Liga",
     "Number of teams": "Liczba drużyn",
     "Add season": "Utwórz sezon",
     "Season name": "Nazwa sezonu",
-    "Apply": "Dołącz"
+    "Apply": "Dołącz",
+    "Apply to the team": "Dołącz do drużyny"
 }
