Joining team as player or coach, timetable

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -24,5 +24,8 @@
     "Add season": "Utwórz sezon",
     "Season name": "Nazwa sezonu",
     "Apply": "Dołącz",
-    "Apply to the team": "Dołącz do drużyny"
+    "Apply to the team": "Dołącz do drużyny",
+    "Player": "Zawodnik",
+    "Coach": "Trener",
+    "Role": "Rola"
 }
