Fixed apply to the team

--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -31,5 +31,49 @@
     "Users awaiting approval by the coach": "Użytkownicy oczekujący na akceptację trenera",
     "Users awaiting approval by the admin": "Użytkownicy oczekujący na akceptację admina",
     "Accept": "Akceptuj",
-    "Decline": "Odrzuć"
+    "Decline": "Odrzuć",
+	"Become a referee": "Zostań sędzią",
+	"Show my players": "Pokaż moich zawodników",
+	"Show timetables": "Pokaż terminarze",
+	"Create timetable": "Utwórz terminarz",
+	"View seasons": "Wyświetl sezony",
+	"Tables": "Tabele",
+	"You are logged in!": "Zostałeś zalogowany!",
+	"Timetables": "Terminarze",
+	"Archive": "Archiwum",
+	"Logout": "Wyloguj",
+	"View details": "Wyświetl szczegóły",
+	"All seasons": "Wszystkie obecne sezony",
+	"All leagues": "Wszystkie obecne ligi",
+	"Timetable": "Terminarz",
+	"Season": "Sezon",
+	"All timetables": "Wszystkie terminarze",
+	"Show timetable": "Wyświetl terminarz",
+	"Your players": "Twoi zawodnicy",
+	"View player": "Wyświetl zawodnika",
+	"Show player": "Zawodnik",
+	"Player info": "Informacje o zawodniku",
+	"Player name": "Imię zawodnika",
+	"Player surname": "Nazwisko zawodnika",
+	"Birth date": "Data urodzenia",
+	"Status": "Status zawodnika",
+	"assigned to the team ": "Przypisany do drużyny",
+	"Stats": "Statystyki zawodnika",
+	"This season": "Obecny sezon",
+	"Goals": "Zdobyte bramki",
+	"Assists": "Asysty",
+	"Minutes played": "Czas na boisku",
+	"Yellow cards": "Żółte kartki",
+	"Red cards": "Czerwone kartki",
+	"Remove": "Usuń zawodnika",
+	"Select role": "Wybierz rolę",
+	"Select league": "Wybierz ligę",
+	"Your role is actually assigned ": "Twoja rola jest już przypisana",
+	"Home": "Strona główna",
+	"Hello Coach": "Witaj trenerze",
+    "Your actual role is": "Twoja obecna rola to:",
+	"Your current team is": "Twoja obecna drużyna to:",
+	"There are no users ": "Brak oczekujących zawodników",
+	"Add league": "Utwórz nową ligę"
+	
 }
