--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -74,6 +74,7 @@
     "Your actual role is": "Twoja obecna rola to:",
 	"Your current team is": "Twoja obecna drużyna to:",
 	"There are no users ": "Brak oczekujących zawodników",
-	"Add league": "Utwórz nową ligę"
+	"Add league": "Utwórz nową ligę",
+    "Teams" : "Druzyny"
 
 }
