--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -58,9 +58,9 @@
 	"Birth date": "Data urodzenia",
 	"Status": "Status zawodnika",
 	"assigned to the team ": "Przypisany do drużyny",
-	"Stats": "Statystyki zawodnika",
+	"Stats": "Statystyki",
 	"This season": "Obecny sezon",
-	"Goals": "Zdobyte bramki",
+	"Goals": "Bramki",
 	"Assists": "Asysty",
 	"Minutes played": "Czas na boisku",
 	"Yellow cards": "Żółte kartki",
@@ -75,6 +75,52 @@
 	"Your current team is": "Twoja obecna drużyna to:",
 	"There are no users ": "Brak oczekujących zawodników",
 	"Add league": "Utwórz nową ligę",
-    "Teams" : "Druzyny"
+    "Teams" : "Drużyny",
+    "All teams" : "Wszystkie drużyny",
+    "Set active" : "Ustaw na aktywny",
+    "Set inactive" : "Ustaw na nieaktywny",
+    "Set incoming" : "Ustaw na nadchodzący",
+    "Active" : "Aktywny",
+    "Inactive" : "Nieaktywny",
+    "Incoming" : "Nadchodzący",
+    "There isn't incoming season to create timetable" : "Nie ma nadchodzącego sezonu żeby utworzyć terminarz",
+    "Your role is actually assigned" : "Twoja rola jest juz przypisana",
+    "There are no users" : "Brak użytkowników",
+    "Edit team" : "Edycja drużyny",
+    "Show team" : "Podgląd drużyny",
+    "Show players" : "Podgląd zawodników",
+    "Suspend" : "Zawieś",
+    "Suspended" : "Zawieszony",
+    "Edit suspension" : "Edytuj zawieszenie",
+    "assigned to the team" : "przypisany do drużyny",
+    "Length" : "Długość",
+    "Reason" : "Powód",
+    "Matches left" : "Pozostałe mecze",
+    "Edit match" : "Edytuj mecz",
+    "Change date" : "Zmień date",
+    "Change" : "Zmień",
+    "Accepted" : "Zaakceptowany",
+    "Other" : "Inny",
+    "Waiting for accept" : "Oczekujący na zatwierdzenie",
+    "Incoming match" : "Nadchodzący mecz",
+    "Match Result" : "Wyniki meczu",
+    "Start" : "Początek",
+    "End" : "Koniec",
+    "Enable" : "Odblokuj",
+    "Restore editable" : "Przywróć możliwość edycji",
+    "Update" : "Aktualizuj",
+    "Team" : "Drużyna",
+    "Suspension status" : "Status zawieszenia",
+    "Update match" : "Aktualizuj mecz",
+    "Accept protocol" : "Zaakceptuj protokół",
+    "Players" : "Zawodnicy",
+    "Are you sure, you want to become a referee ?" : "Czy jesteś pewny że chcesz zostać sędzią ?",
+    "Yes" : "Tak",
+    "No" : "Nie",
+    "Theres no incoming season, you can't aplly right now" : "Nie ma nadchodzączego sezonu, nie możesz teraz aplikować",
+    "You are with us" : "Jesteś z nami",
+    "days" : "dni"
+
+
 
 }
