--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -119,7 +119,9 @@
     "No" : "Nie",
     "Theres no incoming season, you can't aplly right now" : "Nie ma nadchodzączego sezonu, nie możesz teraz aplikować",
     "You are with us" : "Jesteś z nami",
-    "days" : "dni"
+    "days" : "dni",
+    "Create" : "Tworzenie",
+    "Show" : "Podgląd"
 
 
 
