--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -121,7 +121,9 @@
     "You are with us" : "Jesteś z nami",
     "days" : "dni",
     "Create" : "Tworzenie",
-    "Show" : "Podgląd"
+    "Show" : "Podgląd",
+    "Move team" : "Przenieś drużynę",
+    "Move" : "Przenieś"
 
 
 
